# pim-sim

./: .clang-format  .gitignore  CMakeLists.txt  run_dac.sh  run_sim_0.72V.sh  run_sim_0.8V.sh  run_sim_0.9V.sh
config/: as_config.json  config-0.8V-0.72V.xlsx  config-0.9V-32macro.xlsx  config-0.9V.xlsx  config_base_0.72V.json  config_base_0.9V.json  config_bs_0.72V.json  config_bs_0.9V.json  config_bs_vs_0.72V.json  config_bs_vs_0.9V.json  config_template.json  config_vs_0.72V.json  config_vs_0.9V.json  power_report.xlsx
config/0p72V/: config_base.json  config_bs.json  config_bs_vs.json  config_vs.json
config/0p8V/: config_base.json  config_bs.json  config_bs_vs.json  config_vs.json
config/2024dac/: config-bak.json  config.json  flit16dim8.json
config/test/: Core_Transfer_test_config.json  SIMD_Transfer_test_config.json  macro_group_test_config_base.json  macro_group_test_config_wbs_ibs.json  macro_group_test_config_wbs_ibs_wvs.json  macro_group_test_config_wvs.json  macro_test_config_base.json  macro_test_config_ibs.json  macro_test_config_wbs.json  macro_test_config_wbs_ibs.json  pim_compute_unit_test_config_base.json  pim_compute_unit_test_config_bs.json  pim_compute_unit_test_config_bs_vs.json  pim_compute_unit_test_config_vs.json  pim_load_unit_test_config.json  pim_output_unit_test_config.json  pim_set_unit_test_config.json  pim_transfer_unit_test_config.json  scalar_test_config.json
config/test/chip/: chip_test_config_1.json  chip_test_config_2.json  chip_test_config_3.json
doc/: ISA.md
src/base_component/: base_module.cpp  base_module.h  clock.cpp  clock.h  energy_counter.cpp  energy_counter.h  fsm.h  memory_socket.cpp  memory_socket.h  reg_unit_socket.cpp  reg_unit_socket.h  register.h  stall_handler.cpp  stall_handler.h  submodule_socket.h
src/chip/: chip.cpp  chip.h
src/config/: config.cpp  config.h  config_enum.cpp  config_enum.h
src/core/: core.cpp  core.h
src/core/local_memory_unit/: local_memory.cpp  local_memory.h  local_memory_unit.cpp  local_memory_unit.h  ram.cpp  ram.h  reg_buffer.cpp  reg_buffer.h
src/core/payload/: execute_unit_payload.h  payload.cpp  payload.h  payload_enum.cpp  payload_enum.h
src/core/pim_unit/: macro.cpp  macro.h  macro_group.cpp  macro_group.h  macro_group_controller.cpp  macro_group_controller.h  pim_compute_unit.cpp  pim_compute_unit.h  pim_load_unit.cpp  pim_load_unit.h  pim_output_unit.cpp  pim_output_unit.h  pim_payload.h  pim_set_unit.cpp  pim_set_unit.h  pim_transfer_unit.cpp  pim_transfer_unit.h
src/core/reg_unit/: reg_unit.cpp  (+1 more)
src/isa/: instruction.cpp  instruction.h  isa.h
src/memory/: global_memory.cpp  global_memory.h  memory.cpp  memory.h  memory_hardware.h  ram.cpp  ram.h  reg_buffer.cpp  reg_buffer.h
src/network/: network.cpp  network.h  payload.h  switch.cpp  switch.h  switch_socket.cpp  switch_socket.h
src/simulator/: layer_simulator.cpp  layer_simulator.h  network_simulator.cpp  network_simulator.h
src/util/: ins_stat.cpp  ins_stat.h  log.cpp  log.h  macro_scope.h  reporter.cpp  reporter.h  util.cpp  util.h
test/: chip_test.cpp  config_test.cpp  core_test.cpp  local_memory_unit_test.cpp  macro_group_test.cpp  macro_test.cpp  pim_set_unit_test.cpp  simd_unit_test.cpp  test.cpp  test_payload.cpp  test_payload.h  test_wrap.cpp  transfer_unit_test.cpp
test/base/: test_macro.h
test/execute_unit_test/: execute_unit_test.h  pim_compute_unit_test.cpp  pim_load_unit_test.cpp  pim_output_unit_test.cpp  pim_set_unit_test.cpp  pim_transfer_unit_test.cpp  simd_unit_test.cpp  transfer_unit_test.cpp
test/other_test/: local_memory_unit_test.cpp  macro_group_test.cpp  macro_test.cpp
test_config/: alexnet_0.72V.json  alexnet_0.9V.json  efficient_0.72V.json  efficient_0.9V.json  mobilev2_0.72V.json  mobilev2_0.9V.json  resnet18_0.72V.json  resnet18_0.9V.json  vgg19_0.72V.json  vgg19_0.9V.json
test_config/0p72V/: alexnet.json  efficient.json  mobilev2.json  resnet18.json  vgg19.json
test_config/0p8V/: alexnet.json  efficient.json  mobilev2.json  resnet18.json  vgg19.json
test_data/: pim_load_unit_test_data_1.json  simd_unit_test_data_1.json  test_config.json  transfer_unit_test_data_1.json
test_data/2024dac/: code-4conv-2.json  code-4conv.json  resnet-2024-11-15T23-38.json
test_data/chip/: chip_test_data_1.json  chip_test_data_10.json  chip_test_data_11.json  chip_test_data_12.json  chip_test_data_13.json  chip_test_data_14.json  chip_test_data_15.json  chip_test_data_16.json  chip_test_data_17.json  chip_test_data_18.json  chip_test_data_19.json  chip_test_data_2.json  chip_test_data_20.json  chip_test_data_3.json  chip_test_data_4.json  chip_test_data_5.json  chip_test_data_6.json  chip_test_data_7.json  chip_test_data_8.json  chip_test_data_9.json  network_config_1.json  network_config_2.json
test_data/core/: core_test_data_1.json  core_test_data_10.json  core_test_data_11.json  core_test_data_12.json  core_test_data_13.json  core_test_data_2.json  core_test_data_3.json  core_test_data_4.json  core_test_data_5.json  core_test_data_6.json  core_test_data_7.json  core_test_data_8.json  core_test_data_9.json  instruction_template.json
test_data/macro/: macro_test_data_base.json  macro_test_data_base_ipu.json  macro_test_data_ibs.json  macro_test_data_ibs_ipu.json  macro_test_data_ibs_wbs.json  macro_test_data_ibs_wbs_ipu.json  macro_test_data_wbs.json  macro_test_data_wbs_ipu.json
test_data/macro_group/: macro_group_test_data_base.json  macro_group_test_data_ibs_wbs.json  macro_group_test_data_ibs_wbs_wvs.json  macro_group_test_data_wvs.json
test_data/pim_compute/: energy.xlsx  pim_compute_unit_test_data_base.json  pim_compute_unit_test_data_bs.json  pim_compute_unit_test_data_bs_vs.json  pim_compute_unit_test_data_vs.json
test_data/pim_output/: pim_output_unit_test_data_1.json
test_data/pim_set/: pim_set_unit_test_data_1.json  pim_set_unit_test_data_2.json  pim_set_unit_test_data_3.json  pim_set_unit_test_data_4.json  pim_set_unit_test_data_5.json  pim_set_unit_test_data_6.json
test_data/pim_transfer/: pim_transfer_unit_test_data_1.json
util/: tool.py  write_bin.py
(+6 files in other folders)
